--- a/CEN.ERRU.Api/CEN.ERRU.Api/CEN.ERRU.Api.csproj
+++ b/CEN.ERRU.Api/CEN.ERRU.Api/CEN.ERRU.Api.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Certificate" Version="5.0.9" />
     <PackageReference Include="SoapCore" Version="1.1.0.12" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
